--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,6 +14,10 @@ collections:
 media_folder: "src/assets/images" # Location where files will be stored in the repo
 public_folder: "src/assets/images" # The src attribute for uploaded media
 
+local_backend: true
+
 backend:
-  name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  name: test-repo
+  
+
+  
