--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,11 +4,10 @@ collections:
     folder: "src/pages/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in frontmatter
-      - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
+      - { label: "author", name: "Author", widget: "string" }
+      - { label: "pubDate", name: "date", widget: "datetime" }
+      - { label: "description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
 
 media_folder: "src/assets/images" # Location where files will be stored in the repo
