--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,9 +1,10 @@
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
+    label: "Blog Post" # Used in the UI
     folder: "src/pages/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in frontmatter
+      - { label: "Layout", name: "layout", widget: "hidden", default: "../../layouts/MarkdownPostLayout.astro" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "author", name: "Author", widget: "string" }
       - { label: "pubDate", name: "date", widget: "datetime" }
