testing layouts from cms blog posts

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,7 +4,7 @@ collections:
     folder: "src/pages/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in frontmatter
-      - { label: "Layout", name: "layout", widget: "hidden", default: "../../layouts/MarkdownPostLayout.astro" }
+      - { label: "Layout", name: "layout", widget: "string", default: "../../layouts/MarkdownPostLayout.astro" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "author", name: "Author", widget: "string" }
       - { label: "pubDate", name: "date", widget: "datetime" }
