--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,8 +4,8 @@ collections:
     folder: "src/pages/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     fields: # The fields for each document, usually in frontmatter
-      - { label: "Layout", name: "layout", widget: "text", default: "../../layouts/MarkdownPostLayout.astro" }
       - { label: "Title", name: "title", widget: "string" }
+      - { label: "Layout", name: "layout", widget: "select", options: "../../layouts/MarkdownPostLayout.astro" }
       - { label: "author", name: "Author", widget: "string" }
       - { label: "pubDate", name: "date", widget: "datetime" }
       - { label: "description", name: "description", widget: "text" }
