md post layout was trying to pull an image from the posts when there was none which i think is what was causing the build to fail so this should be fixed now hopeffuly

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,6 +8,7 @@ collections:
       - { label: "Layout", name: "layout", widget: "string", default: "../../layouts/MarkdownPostLayout.astro" }
       - { label: "Author", name: "author", widget: "string" }
       - { label: "Date", name: "pubDate", widget: "datetime" }
+      - { label: "Image", name: "image", widget: "image" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Body", name: "body", widget: "markdown" }
 
